--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
     <application
@@ -48,7 +49,9 @@
         </activity>
         <activity android:name=".FirewallActivity">
         </activity>
-        <activity android:name=".VPNActivity">
+        <activity android:name=".VPNActivity"
+            android:windowSoftInputMode="stateHidden">
+
         </activity>
     </application>
 
